# pascals_triangle

./: .clang-format  404.html  CMakeLists.txt  README.md  all_your_tests_are_terrible.html  code_alignment_issues.html  conclusion.html  constexpr_cake.html  everything_is_a_matrix.html  index.html  laziness.html  new_order_of_things  optimizer_magic.html  pascals_triangle.cpp  pascals_triangle.html  pascals_triangle_tests.cpp  print.html  property_based_testing.html  ranges.html  searchindex.js  searchindex.json  stl_algorithms.html  submissions.html  submissions_appendix.html
appendices/: problem_statement.html  test_setup.html
loops/: be_kind_to_your_cache.html  cost_of_allocation.html  dont_do_unnecessary_work.html  loops.html  memory_allocation_matters.html  span.html  summary.html  tracing_function_calls.html
results/: CMakeLists.txt
results/solutions/: ArchBanana.h  AskingCrow.cpp  CluelessWolverine.cpp  CluelessWolverine2.cpp  Erwin.h  FireFly.cpp  FireFly.h  Fortran4Ever.cpp  Pixelf.cpp  Porpoison.h  Proteus.h  TerrificPhantom.cpp  user_usery.cpp
solutions/: ArchBanana.html  ArchBanana2_arh.html  ArchBanana_commented.h  AskingCrow.html  Baseline.html  BumbleBeetle.html  CluelessWolverine.html  CluelessWolverine2.html  DigitalGerbil.html  Erwin.html  EvilDoughnut.html  FireFly.html  FlyingDesitter_arh.html  Fortran4Ever.html  FrostyMongoose.html  GroovyZone.html  LightningHippo_arh.html  LordVader.html  LordVader2_arh.html  Pixelf.html  Pixelf_TBB_arh.html  Pixelf_TBB_boost_arh.html  Pixelf_TBB_monotonic_alloc_arh.html  Pixelf_TBB_scalable_alloc_arh.html  Pixelf_TBB_single_array_arh.html  Pixelf_TBB_spans_arh.html  Porpoison.html  Proteus.html  TerrificPhantom.html  pascalsTriangle.for.html  simple_basic_solution.html  user_usery.html
threads/: allocators.html  amdahls_law.html  async.html  cleverness.html  summary.html  threads_to_the_rescue.html  work_stealing.html
